# dslab-rag-e2e

./: .env.example  00-setup.ipynb  00-template.ipynb  01-oai-respones.ipynb  02-chains-basics.ipynb  03-lcel-basics.ipynb  03-lcel_basics.ipynb  04-rag-langchain.ipynb  05-langgraph-basics.ipynb  06-rag-langgraph.ipynb  07-llmops.ipynb  08-evaluation.ipynb  08-grounding.ipynb  09-memory.ipynb  10-router.ipynb  11-grading.ipynb  11-tut-openai-other.ipynb  12-qrewrite.ipynb  20-best-practices.ipynb  31-tut-openai-other.ipynb  README.md  app.py  backend.py  dev.ipynb  load_docs.py  main.py  pyproject.toml  rag.py  requirements.txt
conf/: infra.yaml  settings.yaml
data/interim/: Divulgacion-Planetaria-Althera.md
data/pipeline/: Divulgacion-Planetaria-Althera.md  doc_analysis.json
data/processed/: dataset_eval_k3.csv
data/raw/: dataset_qa.csv
src/: conf.py  sample_docs.py  utils.py
tests/: test_example.py
